--- a/examples/package.json
+++ b/examples/package.json
@@ -7,7 +7,7 @@
     "@editorjs/checklist": "latest",
     "@editorjs/code": "latest",
     "@editorjs/delimiter": "latest",
-    "@editorjs/editorjs": "latest",
+    "@editorjs/editorjs": "2.25.0",
     "@editorjs/embed": "latest",
     "@editorjs/header": "latest",
     "@editorjs/image": "latest",
@@ -15,7 +15,7 @@
     "@editorjs/link": "latest",
     "@editorjs/list": "latest",
     "@editorjs/marker": "latest",
-    "@editorjs/paragraph": "latest",
+    "@editorjs/paragraph": "2.8.0",
     "@editorjs/quote": "latest",
     "@editorjs/raw": "latest",
     "@editorjs/simple-image": "latest",
