--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git://avinash-threado/react-editor-js.git"
+    "url": "git://github.com/avinash-threado/react-editor-js.git"
   },
   "devDependencies": {
     "@release-it/conventional-changelog": "^3.3.0",
